fix spacing on home page button

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -118,6 +118,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    gap: 0.5rem;
     background-color: var(--link-hover-bg-color);
     color: var(--main-light-text-color);
     padding-block: 0.77rem;
